# Bad-Sky-Cab

./: .gitignore  Makefile  README.md  analysis-tools.js  benchmark.js  game-selector.js  index.html  javascript_profile.txt  main.js  package-lock.json  package.json  performance_report.txt  profile-compare.py  rust_profile.txt  system-monitor.js  test-runner.js  webpack.config.js
.github/workflows/: build-rust-wasm.yml  deploy-pages.yml
app/: bundle.js
assets/css/: main.css
lib/: backdrop.js  cab.js  floating_platform.js  game.js  hat.js  home_screen.js  info_box.js  obstacles.js  obstructions.js  performance_profiler.js  tall_tower.js  tower.js  towers.js  util.js
lib/audio/: sound.js
lib/interface/: damage_box.js  directions_box.js  game_overlay.js  home_overlay.js  overlay.js  score_box.js  speaker_icon.js  start_game_box.js  title_box.js  warnings.js
lib/obstacles/: billboard.js  building_top.js  delivery.js  delivery_left.js  delivery_right.js  delivery_truck.js  floating_platform.js  obstacle.js  tall_tower.js  train.js  vehicle.js  vehicle_left.js  vehicle_right.js  wide_tower.js
rust-game/: Cargo.toml
rust-game/src/: background.rs  entities.rs  game_state.rs  lib.rs  physics.rs  profiler.rs
